--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", sans-serif, Georgia, serif;
 }
 
 .container {
@@ -62,6 +62,9 @@ header {
 
 .right_column {
   background-color: #eaeaea;
+  padding: 38px 24px 60px 40px;
+  max-width: 503px;
+  ;
 }
 
 .date {
@@ -90,8 +93,7 @@ header {
   text-transform: uppercase;
 }
 
-.section_two p,
-span {
+.day_week {
   font-family: Circe;
   font-size: 30px;
   font-weight: 700;
@@ -100,15 +102,20 @@ span {
   margin: 0px;
 }
 
-.section_two span {
-  font-size: 30px;
+.day_number {
+  font-family: Circe;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin: 0px;
+  font-size: 36px;
 }
 
 .hr {
   min-width: 289px;
   border-bottom: 2px dashed #ffffff;
-  margin-top: 17px;
-  margin-bottom: 20px;
+  margin-top: 14px;
+  margin-bottom: 15px;
 }
 
 .text_align__left {
@@ -139,4 +146,63 @@ span {
 
 .speaker_info li {
   margin-bottom: 20px;
+}
+
+.italian {
+  color: #ffffff;
+  font-family: Georgia;
+  font-size: 22px;
+  font-style: italic;
+}
+
+.speaker_info p {
+  font-size: 22px;
+  font-weight: 700;
+  font-family: Georgia;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.stream_starts {
+  color: #2b2e35;
+  font-family: "PT Sans";
+  font-size: 21px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.timer_block {
+  background-color: #2b2e35;
+  color: #ffffff;
+  padding: 16px 27px;
+  text-align: center;
+  border-radius: 5px;
+  font-family: Circe;
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.timer_text {
+  margin-top: 10px;
+  color: #2b2e35;
+  font-family: Circe;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.right_column__list-tittle {
+  margin: 40px 0 70px 0;
+  color: #2b2e35;
+  font-family: "PT Sans";
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.right_column_list ul {
+  list-style: none;
+  list-style-image: url(..//img/list.png);
 }
